apps/desktop/src-tauri/src/prompts/snapshots/testing_ide_lib__prompts__snapshots__bug_report_v2_messages.snap
---
source: src/prompts/snapshots.rs
expression: dump_messages(&msgs)
---
- role: system
  text: "You are a senior engineer formatting a runtime-issue report for an issue tracker. The output must be self-contained — a triage engineer should understand the problem without reading the surrounding context.\n\nRules:\n- Steps to reproduce are imperative, ordered, numbered, and minimal — strip irrelevant setup. At least one step is required.\n- Expected vs Actual must be concrete and observable.\n- `severity` is IMPACT on the system (blocker > critical > major > minor > trivial). `priority` is URGENCY of the fix (p0 > p1 > p2 > p3). They are independent — a cosmetic blocker on a rarely-used screen can be severity blocker / priority p3.\n- `reproducibility` states how reliably the bug occurs: always, intermittent, or once.\n- Supply `workaround` when a user-side mitigation exists; supply `component` (module / subsystem name) when the affected area is clear from the code.\n- Root cause analysis cites specific symbols / line ranges from the supplied chunks. Do NOT speculate beyond what the code shows.\n- One bug per report. If multiple defects share a symptom, emit multiple reports rather than coalescing.\n- Bug IDs must strictly match the regex `^BUG-[A-Z0-9_-]+$` (all-caps, e.g., `BUG-SESSION-LEAK`, NOT `BUG-Session-Leak` or `BUG-Session`).\n- Always invoke the `emit_bug_report` tool with the structured payload. Never reply with free-form prose.\n\nThe structured payload MUST have the following JSON structure:\n{\n  \"bugs\": [\n    {\n      \"id\": \"BUG-UNIQUE-ID\",\n      \"title\": \"Short descriptive title of the bug\",\n      \"severity\": \"blocker | critical | major | minor | trivial\",\n      \"priority\": \"p0 | p1 | p2 | p3\",\n      \"reproducibility\": \"always | intermittent | once\",\n      \"environment\": \"OS/runtime stack when known\",\n      \"component\": \"Affected module / subsystem when known\",\n      \"stepsToReproduce\": [\"1. Step one\", \"2. Step two\"],\n      \"expectedBehavior\": \"Expected behavior\",\n      \"actualBehavior\": \"Actual behavior\",\n      \"workaround\": \"User-side mitigation when one exists\",\n      \"rootCause\": {\n        \"symbol\": \"Function/class/method name\",\n        \"startLine\": 10,\n        \"endLine\": 20,\n        \"fileHint\": \"path/to/file.ext\",\n        \"explanation\": \"Root cause explanation\"\n      },\n      \"evidenceSnippet\": \"Verbatim snippet of code showing the bug\"\n    }\n  ]\n}"
- role: user
  text: "# Project: fixture-project\n\nScope: auth module\n\n## Project context\n\nFixture summary used for snapshot tests.\n\n## Code in scope\n\n--- chunk 1 | function `login` (lines 10–25) ---\nfunction login(creds) { return verify(creds); }\n\n\n--- chunk 2 | class `SessionStore` (lines 30–60) ---\nclass SessionStore { /* ... */ }\n\n\n\n\n[CRITICAL INSTRUCTION] You MUST now invoke the `emit_bug_report` tool with the structured report.\nThe JSON payload MUST have exactly these keys (and no others):\n{\n\"bugs\": [\n{\n\"id\": \"BUG-UNIQUE-ID\",\n\"title\": \"Short descriptive title of the bug\",\n\"severity\": \"blocker | critical | major | minor | trivial\",\n\"priority\": \"p0 | p1 | p2 | p3\",\n\"reproducibility\": \"always | intermittent | once\",\n\"environment\": \"OS/runtime stack when known\",\n\"component\": \"Affected module / subsystem when known\",\n\"stepsToReproduce\": [\"1. Step one\", \"2. Step two\"],\n\"expectedBehavior\": \"Expected behavior\",\n\"actualBehavior\": \"Actual behavior\",\n\"workaround\": \"User-side mitigation when one exists\",\n\"rootCause\": {\n\"symbol\": \"Function/class/method name\",\n\"startLine\": 1,\n\"endLine\": 10,\n\"fileHint\": \"path/to/file.ext\",\n\"explanation\": \"Root cause explanation\"\n},\n\"evidenceSnippet\": \"Verbatim snippet of code showing the bug\"\n}\n]\n}\n`severity` is impact (blocker|critical|major|minor|trivial); `priority` is urgency (p0|p1|p2|p3) — set them independently. `stepsToReproduce` needs at least one numbered step.\nDo NOT output fields from the codebase (like architect, location, timeline, bhk_display, category, etc.) at the top level. You MUST use only the keys listed above. Do NOT reply with free-form prose, apologies, or explanations. You MUST invoke the tool."
